kubernetes/statefulset/login-nodejs/pod-testdb.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-mysql
  name: test-mysql
spec:
  containers:
  - args:
    - sleep
    - "5000"
    image: ubuntu
    name: test-mysql
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
