kubernetes/statefulset/login-nodejs/statefulset-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      type: master
  serviceName: "mysql"
  #replicas: 3
  template:
    metadata:
      labels:
        app: mysql
        type: master
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: db
          mountPath: /var/lib/mysql
        - name: config-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: config-initdb
          configMap:
            name: initdb
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      #storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 5Gi
