kubernetes/statefulset/login-nodejs/service-login.yaml
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  type: NodePort
  selector:
    app: login
  ports:
    - port: 3001
      targetPort: 3001
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 30007
