kubernetes/statefulset/login-nodejs/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
    app-tier: frontend
    zone: public
  type: NodePort
status:
  loadBalancer: {}
