kubernetes/statefulset/login-nodejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  ingressClassName: nginx
  rules:
  - host: phpdbadmin.demo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
  - host: auth.demo.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 3001
